<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:support="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_setting_general"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_setting_general"/>

    <item
            android:id="@+id/action_setting_capcodes"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_setting_capcodes"/>

    <item
            android:id="@+id/action_setting_alarms"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_setting_alarms"/>

    <item
            android:id="@+id/action_logout"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_logout"/>

    <item
            android:id="@+id/action_refresh"
            android:orderInCategory="100"
            support:showAsAction="always"
            android:visible="false"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/menu_action__refresh"/>

    <item
            android:id="@+id/action_capcode_add"
            android:orderInCategory="100"
            support:showAsAction="always"
            android:visible="false"
            android:icon="@drawable/ic_action_user_add"
            android:title="@string/menu_action__capcode_add"/>

</menu>