<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:background="@drawable/white_bg"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:padding="15dp"
            android:scrollbars="vertical">

        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Title -->
                <TextView
                    android:id="@+id/tv_dialog_setting_add_capcode_title"
                    android:text="@string/dialog_setting_add_capcode_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:textSize="26sp"
                    android:textStyle="bold"/>

                <!-- Description -->
                <TextView
                    android:id="@+id/tv_dialog_setting_add_capcode_desc"
                    android:text="@string/dialog_setting_add_capcode_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp" />

                <!-- Divider -->
                <View style="@style/HorizontalDivider"/>

                <!-- START - Form -->
                <!-- Label for capcode field -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_label_field_capcode"
                    android:id="@+id/tl_capcode"
                    android:textSize="20sp"/>

                <!-- Capcode field -->
                <AutoCompleteTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:ems="10"
                    android:hint="@string/et_capcode_hint"
                    android:imeOptions="actionDone"
                    android:id="@+id/et_capcode"/>

                <!-- Form submit button -->
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_form_add_capcode"
                    android:id="@+id/btn_submit_add_capcode"
                    android:layout_gravity="center_horizontal"/>

                <!-- END - Form -->

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>