<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="18dp" >

    <TextView
        android:id="@+id/textlabel_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_textlabel_username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textlabel_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_textlabel_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:password="true" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_btn_login" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom|right"
        android:text="V1.0"
        android:textSize="18sp" />

</LinearLayout>
